[project]
name = "edecan-worker"
version = "0.4.0"
description = "Edecán — worker asíncrono: consumidor SQS, ingesta de documentos, recordatorios, sync de conectores, generación de contenido y consolidación de memoria"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "aioboto3>=13.0",
    "pypdf>=4.3",
    "python-docx>=1.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "edecan-schemas",
    "edecan-db",
    "edecan-core",
    "edecan-llm",
    "edecan-connectors",
    # Headless automations discover these tool packages through entry points.
    # Keep them direct so isolated production installs retain the full registry.
    "edecan-toolkit",
    "edecan-docanalysis",
    "edecan-browser",
    "edecan-creative",
    "edecan-messaging",
    "edecan-agents",
    "edecan-automations",
    "edecan-commerce",
    "edecan-advisory",
    "edecan-business",
    "edecan-skills",
    "edecan-smarthome",
    # Vehicle tools are intentionally outside the worker product surface.
    "edecan-ads",
    "edecan-travel",
    "edecan-voice",
    "edecan-meetings",
    "edecan-mcp",
    # APNs provider-token signing requires PyJWT's cryptography backend.
    "pyjwt>=2.9",
    "cryptography>=42",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
edecan-schemas = { workspace = true }
edecan-db = { workspace = true }
edecan-core = { workspace = true }
edecan-llm = { workspace = true }
edecan-connectors = { workspace = true }
edecan-toolkit = { workspace = true }
edecan-docanalysis = { workspace = true }
edecan-browser = { workspace = true }
edecan-creative = { workspace = true }
edecan-messaging = { workspace = true }
edecan-agents = { workspace = true }
edecan-automations = { workspace = true }
edecan-commerce = { workspace = true }
edecan-advisory = { workspace = true }
edecan-business = { workspace = true }
edecan-skills = { workspace = true }
edecan-smarthome = { workspace = true }
edecan-ads = { workspace = true }
edecan-travel = { workspace = true }
edecan-voice = { workspace = true }
edecan-meetings = { workspace = true }
edecan-mcp = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edecan_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
